<resources>
    <string name="app_name">Calculator</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="button_dot_text">.</string>
    <string name="button_result_text">=</string>
    <string name="button_keyboard_switch">SW</string>
    <string name="button_2_text">2</string>
    <string name="button_1_text">1</string>
    <string name="button_minus_text">-</string>
    <string name="button_5_text">5</string>
    <string name="button_multiply_text">x</string>
    <string name="button_clear_text">C</string>
    <string name="button_remove_text">RM</string>
    <string name="button_divide_text">/</string>
    <string name="button_7_text">7</string>
    <string name="button_8_text">8</string>
    <string name="button_plus_text">+</string>
    <string name="button_4_text">4</string>
    <string name="button_0_text">0</string>
    <string name="button_modulo_text">%</string>
    <string name="button_9_text">9</string>
    <string name="button_6_text">6</string>
    <string name="button_3_text">3</string>
    <string name="left_bracket_text">(</string>
    <string name="right_bracket_text">)</string>
    <string name="sinus_text">sin</string>
    <string name="cosinus_text">cos</string>
    <string name="tangent_text">tan</string>
    <string name="inv_text">INV</string>
    <string name="deg_text">DEG</string>
    <string name="ln_text">ln</string>
    <string name="log_text">lg</string>
    <string name="pi_text">π</string>
    <string name="exp_text">e</string>
    <string name="factorial_text">!</string>
    <string name="pow_text">^</string>
    <string name="radical_text">rad</string>
    <string name="backspace_description">Backspace button</string>
    <string name="equal_text">=</string>
</resources>
