<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/defaultKeyboardConstraint"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".DefaultKeyboardFragment">

        <Button
            android:id="@+id/button_dot"
            style="@style/default_button_style"
            android:text="@string/button_dot_text"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toStartOf="@+id/button_result"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toEndOf="@+id/button_0"
            app:layout_constraintTop_toBottomOf="@+id/button_3" />

        <Button
            android:id="@+id/button_result"
            style="@style/action_button_style"
            android:text="@string/button_result_text"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toEndOf="@+id/button_dot"
            app:layout_constraintTop_toBottomOf="@+id/button_plus" />

        <Button
            android:id="@+id/button_fragment_advanced"
            style="@style/default_button_style"
            android:text="@string/button_keyboard_switch"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toStartOf="@+id/button_0"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/button_1" />

        <Button
            android:id="@+id/button_2"
            style="@style/default_button_style"
            android:text="@string/button_2_text"
            app:layout_constraintBottom_toTopOf="@+id/button_0"
            app:layout_constraintEnd_toStartOf="@+id/button_3"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toEndOf="@+id/button_1"
            app:layout_constraintTop_toBottomOf="@+id/button_5" />

        <Button
            android:id="@+id/button_1"
            style="@style/default_button_style"
            android:text="@string/button_1_text"
            app:layout_constraintBottom_toTopOf="@+id/button_fragment_advanced"
            app:layout_constraintEnd_toStartOf="@+id/button_2"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/button_4" />

        <Button
            android:id="@+id/button_minus"
            style="@style/action_button_style"
            android:text="@string/button_minus_text"
            app:layout_constraintBottom_toTopOf="@+id/button_plus"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toEndOf="@+id/button_6"
            app:layout_constraintTop_toBottomOf="@+id/button_multiply" />

        <Button
            android:id="@+id/button_5"
            style="@style/default_button_style"
            android:text="@string/button_5_text"
            app:layout_constraintBottom_toTopOf="@+id/button_2"
            app:layout_constraintEnd_toStartOf="@+id/button_6"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toEndOf="@+id/button_4"
            app:layout_constraintTop_toBottomOf="@+id/button_8" />

        <Button
            android:id="@+id/button_multiply"
            style="@style/action_button_style"
            android:text="@string/button_multiply_text"
            android:textAllCaps="false"
            app:layout_constraintBottom_toTopOf="@+id/button_minus"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toEndOf="@+id/button_9"
            app:layout_constraintTop_toBottomOf="@+id/button_divide" />

        <Button
            android:id="@+id/button_clear"
            style="@style/action_button_style"
            android:text="@string/button_clear_text"
            app:layout_constraintBottom_toTopOf="@+id/button_7"
            app:layout_constraintEnd_toStartOf="@+id/button_remove"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <Button
            android:id="@+id/button_remove"
            style="@style/action_button_style"
            android:text="@string/button_remove_text"
            app:layout_constraintBottom_toTopOf="@+id/button_8"
            app:layout_constraintEnd_toStartOf="@+id/button_modulo"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toEndOf="@+id/button_clear"
            app:layout_constraintTop_toTopOf="parent" />

        <Button
            android:id="@+id/button_divide"
            style="@style/action_button_style"
            android:text="@string/button_divide_text"
            app:layout_constraintBottom_toTopOf="@+id/button_multiply"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toEndOf="@+id/button_modulo"
            app:layout_constraintTop_toTopOf="parent" />

        <Button
            android:id="@+id/button_7"
            style="@style/default_button_style"
            android:text="@string/button_7_text"
            app:layout_constraintBottom_toTopOf="@+id/button_4"
            app:layout_constraintEnd_toStartOf="@+id/button_8"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/button_clear" />

        <Button
            android:id="@+id/button_8"
            style="@style/default_button_style"
            android:text="@string/button_8_text"
            app:layout_constraintBottom_toTopOf="@+id/button_5"
            app:layout_constraintEnd_toStartOf="@+id/button_9"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toEndOf="@+id/button_7"
            app:layout_constraintTop_toBottomOf="@+id/button_remove" />

        <Button
            android:id="@+id/button_4"
            style="@style/default_button_style"
            android:text="@string/button_4_text"
            app:layout_constraintBottom_toTopOf="@+id/button_1"
            app:layout_constraintEnd_toStartOf="@+id/button_5"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/button_7" />

        <Button
            android:id="@+id/button_plus"
            style="@style/action_button_style"
            android:text="@string/button_plus_text"
            app:layout_constraintBottom_toTopOf="@+id/button_result"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toEndOf="@+id/button_3"
            app:layout_constraintTop_toBottomOf="@+id/button_minus" />

        <Button
            android:id="@+id/button_0"
            style="@style/default_button_style"
            android:text="@string/button_0_text"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toStartOf="@+id/button_dot"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toEndOf="@+id/button_fragment_advanced"
            app:layout_constraintTop_toBottomOf="@+id/button_2" />

        <Button
            android:id="@+id/button_modulo"
            style="@style/action_button_style"
            android:text="@string/button_modulo_text"
            app:layout_constraintBottom_toTopOf="@+id/button_9"
            app:layout_constraintEnd_toStartOf="@+id/button_divide"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toEndOf="@+id/button_remove"
            app:layout_constraintTop_toTopOf="parent" />

        <Button
            android:id="@+id/button_9"
            style="@style/default_button_style"
            android:text="@string/button_9_text"
            app:layout_constraintBottom_toTopOf="@+id/button_6"
            app:layout_constraintEnd_toStartOf="@+id/button_multiply"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toEndOf="@+id/button_8"
            app:layout_constraintTop_toBottomOf="@+id/button_modulo" />

        <Button
            android:id="@+id/button_6"
            style="@style/default_button_style"
            android:text="@string/button_6_text"
            app:layout_constraintBottom_toTopOf="@+id/button_3"
            app:layout_constraintEnd_toStartOf="@+id/button_minus"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toEndOf="@+id/button_5"
            app:layout_constraintTop_toBottomOf="@+id/button_9" />

        <Button
            android:id="@+id/button_3"
            style="@style/default_button_style"
            android:text="@string/button_3_text"
            app:layout_constraintBottom_toTopOf="@+id/button_dot"
            app:layout_constraintEnd_toStartOf="@+id/button_plus"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toEndOf="@+id/button_2"
            app:layout_constraintTop_toBottomOf="@+id/button_6" />
    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>
